<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:orientation="vertical">

    <EditText
        android:focusable="true"
        android:id="@+id/ed_name_item_library"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:ems="10"
        android:gravity="center|start"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/bt_no"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/ed_name_item_library"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/bt_yes"
        android:layout_toLeftOf="@+id/bt_yes"
        android:adjustViewBounds="true"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/dialog_no"
        android:textColor="@color/red_active"
        android:textSize="@dimen/sp17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_yes"
        app:layout_constraintTop_toBottomOf="@+id/ed_name_item_library" />

    <TextView
        android:id="@+id/bt_yes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_below="@+id/ed_name_item_library"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/dialog_yes"
        android:textColor="@color/red_active"
        android:textSize="@dimen/sp17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_name_item_library"
        app:layout_constraintTop_toBottomOf="@+id/ed_name_item_library" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:gravity="center"
        android:text="@string/dialog_rename"
        android:textColor="@color/red_active"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
