<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/edit_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_user"
        app:layout_constraintStart_toEndOf="@+id/tv_name_user"
        app:layout_constraintTop_toTopOf="@+id/tv_name_user" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        android:src="@mipmap/bg_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_user"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp120"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@mipmap/user_profile"
        app:civ_border_color="@color/red_inactive"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"></de.hdodenhof.circleimageview.CircleImageView>

    <ScrollView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_share_black_24dp"
                android:drawablePadding="@dimen/dp16"
                android:gravity="center|start"
                android:paddingLeft="@dimen/dp16"
                android:text="@string/user_share"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_report"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_report_black_24dp"
                android:drawablePadding="@dimen/dp16"
                android:gravity="center|start"
                android:paddingLeft="@dimen/dp16"
                android:text="@string/user_report"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:drawablePadding="@dimen/dp16"
                android:gravity="center|start"
                android:paddingLeft="@dimen/dp16"
                android:text="@string/user_setting"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:adjustViewBounds="true"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_power_settings_new_black_24dp"
                android:drawablePadding="@dimen/dp16"
                android:gravity="center|start"
                android:paddingLeft="@dimen/dp16"
                android:text="@string/user_logout"
                android:textSize="18sp"></TextView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_user" />

</androidx.constraintlayout.widget.ConstraintLayout>